fix options overflow

--- a/src/components/Autocomplete/Autocomplete.css
+++ b/src/components/Autocomplete/Autocomplete.css
@@ -31,9 +31,12 @@
 
 .Autocomplete-option {
   box-sizing: border-box;
-  padding: 10px;
   padding: 0.66rem 1rem;
   cursor: pointer;
+}
+
+.Autocomplete-option p {
+  overflow: hidden;
 }
 
 .Autocomplete-option.focus,
